--- a/main_part/demo.ipynb
+++ b/main_part/demo.ipynb
@@ -343,6 +343,61 @@
     "print(\"a > 100 or a<20:\",a >100 or a < 20)    # or  逻辑或\n",
     "print(\"not a >= 10:\", not a>= 10)             # not 逻辑非"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1739368214.7303646\n",
+      "现在是格林尼治时间 13 时 50 分 14 秒\n",
+      "从1970.1.1零时起到现在，经过了 1739368214 秒\n"
+     ]
+    }
+   ],
+   "source": [
+    "#earthtime.py\n",
+    "import time  #导入一个叫做time的模块\n",
+    "\n",
+    "curTime = time.time()  #从1970.1.1 0:0:0 -->现在经过的总秒数\n",
+    "print(curTime)\n",
+    "totalSeconds = int(curTime)\n",
+    "curSecond = totalSeconds % 60  #当前秒数\n",
+    "totalMinutes = totalSeconds // 60  #总分钟数\n",
+    "curMinute = totalMinutes % 60  #当前分钟数\n",
+    "totalHours = totalMinutes // 60  #总小时数\n",
+    "curHour = totalHours % 24  #当前小时数\n",
+    "\n",
+    "print(\"现在是格林尼治时间\",curHour,\"时\",curMinute,\"分\",curSecond,\"秒\")\n",
+    "print(\"从1970.1.1零时起到现在，经过了\",totalSeconds,\"秒\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025 - 2 - 12 \n",
+      " 21 : 56 : 38\n",
+      "<class 'datetime.datetime'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "curDate = datetime.datetime.now()  #当前的系统时间\n",
+    "print(curDate.year,\"-\",curDate.month,\"-\",curDate.day,\"\\n\",\\\n",
+    "    curDate.hour,\":\",curDate.minute,\":\",curDate.second)\n",
+    "print(type(curDate))"
+   ]
   }
  ],
  "metadata": {
